examples/test/testpolicy12564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12564
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key1: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value25
      podSelector:
        matchLabels:
          key2: value42
          key23: value24
          key0: value42
